# cpp-project

./: CMakeLists.txt  LICENSE  README.md  install.sh
include/: args.h
src/: args.c  main.c
templates/lua-5.4/: CMakeLists.txt
templates/lua-5.4/src/: main.cpp
